--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyChats">
         <activity
-            android:name=".SubActivity.ChatActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden"
-            android:exported="true" />
-        <activity
-            android:name=".SubActivity.LoginActivity"
+            android:name=".Feeds.FeedsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +20,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SubActivity.ChatActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name=".SubActivity.LoginActivity"
+            android:exported="true">
+        </activity>
         <activity android:name=".MainActivity" />
 
-        <service android:name=".Services.FirebaseMessaging"
+        <service
+            android:name=".Services.FirebaseMessaging"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
