--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
         viewBinding true
     }
 
+    packagingOptions {
+        exclude 'META-INF/*'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -53,9 +57,11 @@ dependencies {
     //API
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //implementation 'net.sourceforge.htmlunit:htmlunit:2.15'
 
     //pusher
     implementation 'com.pusher:pusher-java-client:2.2.6'
-    implementation 'com.github.curioustechizen.android-ago:library:1.3.2'
-    implementation 'com.google.code.gson:gson:2.4'
+    implementation 'com.pusher:pusher-http-java:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
+
 }
