--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,18 @@ dependencies {
 
     //pusher
     implementation 'com.pusher:pusher-java-client:2.2.6'
-    implementation 'com.pusher:pusher-http-java:1.0.0'
+    //implementation 'com.pusher:pusher-websocket-java:1.0.0'
+    //implementation 'com.pusher:pusher-http-java:1.3.0'
+    implementation 'com.pusher:pusher-http-java:1.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.google.code.gson:gson:2.8.8'
+
+    //noinspection DuplicatePlatformClasses
+    implementation 'org.apache.httpcomponents:httpclient:4.3.5'
+    api 'org.apache.httpcomponents:httpcore:4.4.13'
+    api 'org.apache.httpcomponents:httpmime:4.5.6'
+
+    implementation 'com.codepath.libraries:asynchttpclient:2.1.1'
+
 
 }
