--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyChats">
+        android:theme="@style/Theme.MyChats"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".Feeds.FeedsActivity"
-            android:exported="true">
+            android:name=".Feeds.SecondActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,13 +22,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Feeds.FeedsActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".SubActivity.ChatActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".SubActivity.LoginActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity android:name=".MainActivity" />
 
         <service
